--- a/.config/sway/colors.conf
+++ b/.config/sway/colors.conf
@@ -1,14 +1,14 @@
 # Window: border, background, text, indicator, child_border
 
 #Windows                 #border                      #background                   #text                      #indicator                  #child_border
-client.focused           #bdc2ff  #bdc2ff  #bdc2ff  #bdc2ff  #bdc2ff
+client.focused           #ffb2be  #ffb2be  #ffb2be  #ffb2be  #ffb2be
 
-client.unfocused         #3c4279  #3c4279  #dfe0ff  #3c4279  #3c4279
+client.unfocused         #713340  #713340  #ffd9de  #713340  #713340
 
-#client.focused_inactive  #bdc2ff  #dfe0ff      #131318
+#client.focused_inactive  #ffb2be  #ffd9de      #191112
 #
-#client.placeholder       #000000    #000000     #e4e1e9
+#client.placeholder       #000000    #000000     #f0dee0
 #
-#client.urgent            #e7b9d6  #5e3c53  #45263c
+#client.urgent            #ebbf90  #5f411c  #452b08
 #
-## client.background      #131318  # focus window primary
+## client.background      #191112  # focus window primary
