--- a/gentoo/make.conf
+++ b/gentoo/make.conf
@@ -8,10 +8,12 @@ FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 
 ####################################### rust 
-RUSTFLAGS="${RUSTFLAGS} -C target-cpu=native"
+RUSTFLAGS="${RUSTFLAGS} -C target-cpu=native -C opt-level=3"
 
 MAKEOPTS="-j12 -l12"
 EMERGE_DEFAULT_OPTS="--jobs=6 --load-average=10"
+
+VIDEO_CARDS="amdgpu radeonsi"
 
 # Features
 FEATURES="candy parallel-fetch parallel-install binpkg-request-signature getbinpkg"
