--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -5,9 +5,10 @@ color-modes = true           # Enable true color (24-bit)
 mouse = true                 # Enable mouse support
 bufferline = "multiple"      # Show multiple buffers in top line
 middle-click-paste = true    # Middle-click pastes clipboard
-auto-completion = true       # Show completions automatically
-path-completion = true       # Show path automatically 
-auto-format = true           # Format code on save if supported
+auto-completion = true       # Show suggestions automatically while typing
+completion-replace = true    # Replace the current word with the selected completion
+path-completion = true       # Suggest filesystem paths automatically
+auto-format = false          # Format code on save if supported
 undercurl = true             # Squiggly underline for errors/warnings
 auto-info = true             # Show file info (lines, encoding, etc.)
 indent-heuristic = "tree-sitter"  # Guess indentation using tree-sitter
