--- a/.config/matugen/templates/matugen-foot.ini
+++ b/.config/matugen/templates/matugen-foot.ini
@@ -38,5 +38,5 @@ dim7=BAC2DE
 selection-foreground={{ colors.primary.default.hex_stripped }}
 selection-background={{ colors.on_primary.default.hex_stripped }}
 
-[cursor]
-color={{ colors.surface_variant.default.hex_stripped }} {{ colors.on_surface.default.hex_stripped }}
+[colors]
+cursor={{ colors.surface_variant.default.hex_stripped }} {{ colors.on_surface.default.hex_stripped }}
