--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -1,13 +1,11 @@
 fps=1
-fps_avg=1
+fps_metrics=avg,0.01 
 frametime=1
 
-cpu_stats
 cpu=1
 cpu_per_core=0
 cpu_temp=1
 
-gpu_stats
 gpu=1
 vram=1
 gpu_temp=1
@@ -16,4 +14,3 @@ ram=1
 
 position=top-left
 font_size=24
-fps_metrics=avg
