--- a/gentoo/make.conf
+++ b/gentoo/make.conf
@@ -8,10 +8,10 @@ FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 
 ####################################### rust 
-RUSTFLAGS="${RUSTFLAGS} -C target-cpu=native -C opt-level=3"
+RUSTFLAGS="-C target-cpu=native -C opt-level=3 -C codegen-units=1 -C link-arg=-Wl,-z,pack-relative-relocs"
 
 MAKEOPTS="-j12 -l12"
-EMERGE_DEFAULT_OPTS="--jobs=6 --load-average=10"
+EMERGE_DEFAULT_OPTS="--jobs=4 --load-average=10 --ask "
 
 VIDEO_CARDS="amdgpu radeonsi"
 
@@ -21,7 +21,7 @@ FEATURES="candy parallel-fetch parallel-install binpkg-request-signature getbinp
 ACCEPT_LICENSE="*"
 
 # USE flags
-USE="-kde -gnome -bluetooth -systemd -pulseaudio -cups -gstreamer -nvidia wayland X dbus elogind  pipewire ffmpeg vaapi vulkan"
+USE="-kde -gnome -bluetooth -systemd X -cups -gstreamer -nvidia wayland  dbus elogind  pipewire ffmpeg vaapi vulkan"
 
 # This sets the language of build output to English.
 LC_MESSAGES=C.utf8
